tests/NormalTests/paczka1/fuzzy1/24986632.err
Error in line 1: oFNGwW4 S978 68,5
Error in line 5: 6MzpvJ5Yh6A A127 246,99
Error in line 6: BvFQFrLQ A911 70,1
Error in line 30: 7oHGSQ A911 91,5
Error in line 31: S978 S978 87,8
